# tadam

./: .gitignore  README.md  analyze_params.py  cayley_visualization.py  cayley_vs_simple.py  pyproject.toml  retraction_viz.py
src/tadam/: __init__.py  analyze_params.py  gpt.py  main.py  main_char.py  model.py  ngpt.py  optim.py  utils.py
src/tiny_gpt2/: __init__.py  gpt.py  main.py  ngpt.py  optim.py  utils.py
tests/: test_ngpt.py
