[project]
name = "tiny-gpt2"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Ted", email = "oancea.tudor@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "numpy>=2.1.2",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "tinygrad==0.10.0",
]

[project.scripts]
download_dataset = "tiny_gpt2.main:download_dataset"
train = "tiny_gpt2.main:train"
inference = "tiny_gpt2.main:inference"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "off"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle (errors and warnings)
    "E",
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
]
