[project]
name = "tadam"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [{ name = "Tudor Oancea", email = "oancea.tudor@icloud.com" }]
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.3",
    "matplotlib>=3.9.3",
    "numpy>=2.1.2",
    "pyqt6>=6.8.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
    "tinygrad==0.10.0",
    "wandb>=0.18.7",
]

[project.scripts]
# word-level GPTs
download_dataset = "tadam.main:download_dataset"
beam = "tadam.main:beam"
train = "tadam.main:train"
inference = "tadam.main:inference"
naive_inference = "tadam.main:naive_inference"
# char-level GPTs
download_dataset_char = "tadam.main_char:download_dataset"
beam_char = "tadam.main_char:beam"
train_char = "tadam.main_char:train"
inference_char = "tadam.main_char:inference"
naive_inference_char = "tadam.main_char:naive_inference"
analyze_grads_char = "tadam.main_char:analyze_grads"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "off"

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle (errors and warnings)
    "E",
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
]
